# django-rest-polymorphic

./: AUTHORS.rst  HISTORY.rst  MANIFEST.in  codecov.yml  setup.cfg  tox.ini
.github/workflows/: ci.yml
example/projects/migrations/: 0001_initial.py
requirements/: testing.txt
rest_polymorphic/: serializers.py
tests/: models.py  settings.py  test_serializers.py
