[metadata]
name = django-rest-polymorphic
version = attr: rest_polymorphic.__version__
description = Polymorphic serializers for Django REST Framework.
long_description = file: README.rst
author = Denis Orehovsky
author_email = denis.orehovsky@gmail.com
url = https://github.com/apirobot/django-rest-polymorphic
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    django
    djangorestframework
    django-polymorphic

[flake8]
extend-ignore = E203
max-line-length = 88
